refac: dataset folder structure

--- a/clean_dataset.ipynb
+++ b/clean_dataset.ipynb
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./datasets/shuffled_44k.csv')\n",
+    "df = pd.read_csv('./datasets/intermediate/shuffled_44k.csv')\n",
     "df"
    ]
   },
@@ -2911,7 +2911,7 @@
     }
    ],
    "source": [
-    "val_df.to_csv('./datasets/clean_val.csv', index=False)\n",
+    "val_df.to_csv('./datasets/cleaned/clean_val.csv', index=False)\n",
     "val_df"
    ]
   },
