--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -13,7 +13,7 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\"datasets/clean_44k.csv\")  \n",
+    "df = pd.read_csv(\"datasets/cleaned/clean_44k.csv\")  \n",
     "X = df.drop(columns=[\"label\"])\n",
     "y = df[\"label\"]"
    ]
