--- a/knn_model.ipynb
+++ b/knn_model.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./datasets/clean_44k.csv')\n"
+    "df = pd.read_csv('./datasets/cleaned/clean_44k.csv')\n"
    ]
   },
   {
@@ -539,7 +539,7 @@
     "# print(pca_feature_names)\n",
     "# print(len(pca_feature_names))\n",
     "\n",
-    "joblib.dump(pipeline, 'saved_models/knn_pipeline_model.joblib')\n"
+    "joblib.dump(pipeline, 'saved_models/knn_44k.joblib')\n"
    ]
   },
   {
