--- a/test.ipynb
+++ b/test.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./datasets/clean_val.csv')"
+    "df = pd.read_csv('./datasets/cleaned/clean_val.csv')"
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn_model = joblib.load('./saved_models/knn_pipeline_model.joblib')\n",
-    "svc_model = joblib.load('./saved_models/svc_pipeline_model.joblib')\n"
+    "knn_model = joblib.load('./saved_models/knn_44k.joblib')\n",
+    "svc_model = joblib.load('./saved_models/svc_44k.joblib')\n"
    ]
   },
   {
