--- a/svc_model.ipynb
+++ b/svc_model.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('./datasets/clean_44k.csv')"
+    "df = pd.read_csv('./datasets/cleaned/clean_44k.csv')"
    ]
   },
   {
@@ -532,7 +532,7 @@
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_svc))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_svc))\n",
     "\n",
-    "joblib.dump(pipeline, 'saved_models/svc_pipeline_model.joblib')"
+    "joblib.dump(pipeline, 'saved_models/svc_44k.joblib')"
    ]
   },
   {
