--- a/knn_model.ipynb
+++ b/knn_model.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./datasets/cleaned/clean_44k.csv')\n"
+    "df = pd.read_csv('./datasets/preprocessed/preprocessed_136k.csv')"
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,38 +460,28 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=10)),\n",
-       "                (&#x27;knn&#x27;, KNeighborsClassifier())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=10)),\n",
-       "                (&#x27;knn&#x27;, KNeighborsClassifier())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>PCA</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.decomposition.PCA.html\">?<span>Documentation for PCA</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>PCA(n_components=10)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "Pipeline(steps=[('scaler', StandardScaler()), ('pca', PCA(n_components=10)),\n",
-       "                ('knn', KNeighborsClassifier())])"
+       "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "pipeline = Pipeline(steps=[\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"pca\", PCA(n_components=10)), \n",
-    "    (\"knn\", KNeighborsClassifier(n_neighbors=5))\n",
-    "])\n",
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
     "\n",
-    "pipeline.fit(X_train, y_train)\n"
+    "knn.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -501,25 +491,25 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      1.00      0.99      4400\n",
-      "           1       1.00      0.98      0.99      4400\n",
+      "           0       1.00      1.00      1.00     13600\n",
+      "           1       1.00      0.99      1.00     13600\n",
       "\n",
-      "    accuracy                           0.99      8800\n",
-      "   macro avg       0.99      0.99      0.99      8800\n",
-      "weighted avg       0.99      0.99      0.99      8800\n",
+      "    accuracy                           1.00     27200\n",
+      "   macro avg       1.00      1.00      1.00     27200\n",
+      "weighted avg       1.00      1.00      1.00     27200\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[4380   20]\n",
-      " [ 100 4300]]\n"
+      " [[13596     4]\n",
+      " [   68 13532]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['saved_models/knn_pipeline_model.joblib']"
+       "['saved_models/knn_136k.joblib']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,18 +518,12 @@
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import joblib\n",
     "\n",
-    "y_pred = pipeline.predict(X_test)\n",
+    "y_pred = knn.predict(X_test)\n",
     "\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "\n",
-    "# column_names = X.columns\n",
-    "# pca_components = pipeline.named_steps['pca'].components_\n",
-    "# pca_feature_names = [column_names[i] for i in pca_components.argmax(axis=1)]\n",
-    "# print(pca_feature_names)\n",
-    "# print(len(pca_feature_names))\n",
-    "\n",
-    "joblib.dump(pipeline, 'saved_models/knn_44k.joblib')\n"
+    "joblib.dump(knn, 'saved_models/knn_136k.joblib')\n"
    ]
   },
   {
@@ -552,7 +536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpu",
+   "display_name": "HPE",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
