--- a/svc_model.ipynb
+++ b/svc_model.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('./datasets/cleaned/clean_44k.csv')"
+    "df = pd.read_csv('./datasets/preprocessed/preprocessed_136k.csv')"
    ]
   },
   {
@@ -459,13 +459,10 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=10)),\n",
-       "                (&#x27;svc&#x27;, SVC())])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=10)),\n",
-       "                (&#x27;svc&#x27;, SVC())])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>PCA</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.decomposition.PCA.html\">?<span>Documentation for PCA</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>PCA(n_components=10)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVC</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVC</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "Pipeline(steps=[('scaler', StandardScaler()), ('pca', PCA(n_components=10)),\n",
-       "                ('svc', SVC())])"
+       "SVC()"
       ]
      },
      "execution_count": 4,
@@ -475,22 +472,15 @@
    ],
    "source": [
     "from sklearn.svm import SVC\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.decomposition import PCA\n",
     "\n",
-    "pipeline = Pipeline(steps=[\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"pca\", PCA(n_components=10)), \n",
-    "    (\"svc\", SVC(kernel=\"rbf\", C=1.0, gamma=\"scale\")) \n",
-    "])\n",
+    "svc = SVC(kernel=\"rbf\", C=1.0, gamma=\"scale\")\n",
     "\n",
-    "pipeline.fit(X_train, y_train)"
+    "svc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -500,25 +490,25 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.99      0.94      4400\n",
-      "           1       0.99      0.87      0.93      4400\n",
+      "           0       1.00      1.00      1.00     13600\n",
+      "           1       1.00      1.00      1.00     13600\n",
       "\n",
-      "    accuracy                           0.93      8800\n",
-      "   macro avg       0.94      0.93      0.93      8800\n",
-      "weighted avg       0.94      0.93      0.93      8800\n",
+      "    accuracy                           1.00     27200\n",
+      "   macro avg       1.00      1.00      1.00     27200\n",
+      "weighted avg       1.00      1.00      1.00     27200\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[4375   25]\n",
-      " [ 563 3837]]\n"
+      " [[13598     2]\n",
+      " [    6 13594]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['saved_models/svc_pipeline_model.joblib']"
+       "['saved_models/svc_136k.joblib']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,12 +517,12 @@
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import joblib\n",
     "\n",
-    "y_pred_svc = pipeline.predict(X_test)\n",
+    "y_pred_svc = svc.predict(X_test)\n",
     "\n",
     "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_svc))\n",
     "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_svc))\n",
     "\n",
-    "joblib.dump(pipeline, 'saved_models/svc_44k.joblib')"
+    "joblib.dump(svc, 'saved_models/svc_136k.joblib')"
    ]
   },
   {
@@ -545,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpu",
+   "display_name": "HPE",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
