--- a/knn_model.ipynb
+++ b/knn_model.ipynb
@@ -536,7 +536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HPE",
+   "display_name": "gpu",
    "language": "python",
    "name": "python3"
   },
@@ -550,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
