--- a/svc_model.ipynb
+++ b/svc_model.ipynb
@@ -7,7 +7,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('./datasets/preprocessed/preprocessed_136k.csv')"
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.svm import SVC\n",
+    "df = pd.read_csv('./datasets/cleaned/clean_136k.csv')"
    ]
   },
   {
@@ -26,6 +30,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "svc_pipeline = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('pca', PCA(n_components=19)),\n",
+    "    ('svc', SVC(kernel=\"rbf\", C=1.0, gamma=\"scale\", probability=True))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -38,7 +55,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['URL_Length', 'Url_Shortening', 'Num_Languages', 'User_Info_Length',\n",
+       "       'Num_Subdomains', 'Num_Digits_Subdomain', 'Num_Hyphens_Subdomain',\n",
+       "       'Length_Subdomain', 'Num_Digits_Domain', 'Num_Hyphens_Domain',\n",
+       "       'Length_Domain', 'Num_Dots_Domain', 'TLD', 'Num_Digits_Path',\n",
+       "       'Num_Hyphens_Path', 'Length_Path', 'Num_Dash_Path',\n",
+       "       'Num_Underscore_Path', 'Num_Percent_Path', 'Num_DoubleSlash_Path',\n",
+       "       'Hex_Encoded_Characters_Path', 'Num_Digits_Query', 'Num_Hyphens_Query',\n",
+       "       'Length_Query', 'Num_Query_Params', 'Num_Dots_Query', 'Num_Dash_Query',\n",
+       "       'Num_Underscore_Query', 'Num_Percent_Query', 'Num_Ampersand_Query',\n",
+       "       'Hex_Encoded_Characters_Query'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X\n",
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -459,53 +507,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVC</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=19)),\n",
+       "                (&#x27;svc&#x27;, SVC(probability=True))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()), (&#x27;pca&#x27;, PCA(n_components=19)),\n",
+       "                (&#x27;svc&#x27;, SVC(probability=True))])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>PCA</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.decomposition.PCA.html\">?<span>Documentation for PCA</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>PCA(n_components=19)</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVC</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVC(probability=True)</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
-       "SVC()"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "svc = SVC(kernel=\"rbf\", C=1.0, gamma=\"scale\")\n",
-    "\n",
-    "svc.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       1.00      1.00      1.00     13600\n",
-      "           1       1.00      1.00      1.00     13600\n",
-      "\n",
-      "    accuracy                           1.00     27200\n",
-      "   macro avg       1.00      1.00      1.00     27200\n",
-      "weighted avg       1.00      1.00      1.00     27200\n",
-      "\n",
-      "Confusion Matrix:\n",
-      " [[13598     2]\n",
-      " [    6 13594]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['saved_models/svc_136k.joblib']"
+       "Pipeline(steps=[('scaler', StandardScaler()), ('pca', PCA(n_components=19)),\n",
+       "                ('svc', SVC(probability=True))])"
       ]
      },
      "execution_count": 6,
@@ -517,12 +525,7 @@
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import joblib\n",
     "\n",
-    "y_pred_svc = svc.predict(X_test)\n",
-    "\n",
-    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_svc))\n",
-    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_svc))\n",
-    "\n",
-    "joblib.dump(svc, 'saved_models/svc_136k.joblib')"
+    "svc_pipeline.fit(X_train, y_train)"
    ]
   },
   {
@@ -530,12 +533,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred_svc = svc_pipeline.predict(X_test)\n",
+    "\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_svc))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_svc))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(svc_pipeline, 'saved_models/svc_136k.joblib')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "HPE",
+   "display_name": "gpu",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
